<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".E06CustomersActivity">

    <!--    CustomerID      -->
    <TableRow android:padding="16dp">

        <TextView
            android:text="@string/CustomerID"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/customerID"
            android:layout_marginLeft="16dp"
            android:text="@string/CustomerID"
            android:textStyle="bold" />

    </TableRow>

    <!--    CustomerName    -->
    <TableRow android:padding="16dp">

        <TextView
            android:text="@string/CustomerName"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/customerName"
            android:layout_marginLeft="16dp"
            android:text="@string/CustomerName"
            android:textStyle="bold" />

    </TableRow>

    <!--    ContactName     -->
    <TableRow android:padding="16dp">

        <TextView
            android:text="@string/ContactName"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/contactName"
            android:layout_marginLeft="16dp"
            android:text="@string/ContactName"
            android:textStyle="bold" />

    </TableRow>

    <!--    Address         -->
    <TableRow android:padding="16dp">

        <TextView
            android:text="@string/Address"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/address"
            android:layout_marginLeft="16dp"
            android:text="@string/Address"
            android:textStyle="bold" />

    </TableRow>

    <!--    City            -->
    <TableRow android:padding="16dp">

        <TextView
            android:text="@string/City"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/city"
            android:layout_marginLeft="16dp"
            android:text="@string/City"
            android:textStyle="bold" />

    </TableRow>

    <!--    PostalCode      -->
    <TableRow android:padding="16dp">

        <TextView
            android:text="@string/PostalCode"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/postalCode"
            android:layout_marginLeft="16dp"
            android:text="@string/PostalCode"
            android:textStyle="bold" />

    </TableRow>

    <!--    Country         -->
    <TableRow android:padding="16dp">

        <TextView
            android:text="@string/Country"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/country"
            android:layout_marginLeft="16dp"
            android:text="@string/Country"
            android:textStyle="bold" />

    </TableRow>

</TableLayout>